Fixed overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ h1, p, h2, h3, li {
 
 body {
     width: 100%;
-    height: 100%;
+    height: fit-content;
     min-width: 300px;
     background-color: #222026;
     margin: 0;
@@ -17,7 +17,7 @@ body {
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 #root { 
